[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["unstable"]}
tokio = {version = "1.29.1", features = ["sync"]}
serde = {version = "1.0.174", features = ["derive", "rc"]}
serde_json = "1.0.103"